--- a/pdfsam-rotate/pom.xml
+++ b/pdfsam-rotate/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.pdfsam</groupId>
 		<artifactId>pdfsam-parent</artifactId>
-		<version>4.1.2-SNAPSHOT</version>
+		<version>4.1.1</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -82,5 +82,9 @@
 			<artifactId>javafx-swing</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.sejda</groupId>
+            <artifactId>sejda-sambox</artifactId>
+        </dependency>
+    </dependencies>
 </project>
